fix: title positioning on mobile

--- a/astro/src/styles/blog.css
+++ b/astro/src/styles/blog.css
@@ -10,3 +10,9 @@ main {
     margin: 0;
     color: rgb(var(--gray));
 }
+
+@media screen and (max-width: 767px) {
+main {
+    padding-top: 10%;
+}
+}
